--- a/docker-compose/kestra/docker-compose.yml
+++ b/docker-compose/kestra/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - /tmp/kestra-wd:/tmp/kestra-wd
     environment:
       # encode string with command -> echo -n "VALUE" | base64
-      SECRET_DISCORD_WEBHOOK: "aHR0cHM6Ly9kaXNjb3JkLmNvbS9hcGkvd2ViaG9va3MvMTIyNDkwODk0NzMwODI4MTg4Ni9NVHlQaHZMNUlTRzMtb0dXUTFPelZPbFhmYWxkOGRxR2xWbzRuOWdOSjd3eW0xdXVPTER2TzZpM0JfTUIzVUttMmVhRg=="
+      #SECRET_DISCORD_WEBHOOK: "DISCORD WEBHOOK URL ENCODED"
       KESTRA_CONFIGURATION: |
         datasources:
           postgres:
