--- a/ansible/hello-world/hello-playbook.yml
+++ b/ansible/hello-world/hello-playbook.yml
@@ -1,9 +1,8 @@
-# This playbook prints a simple debug message
-- name: Echo 
-  hosts: 127.0.0.1
-  connection: local
-
+---
+- name: Hello World!
+  hosts: all
+ 
   tasks:
-  - name: Print debug message
-    debug:
-      msg: Hello, world!
+ 
+  - name: Hello World!
+    shell: echo "Hi! Tower is working."
