hello-playbook network echo

--- a/ansible/hello-world/hello-playbook.yml
+++ b/ansible/hello-world/hello-playbook.yml
@@ -1,8 +1,9 @@
----
-- name: Hello World!
-  hosts: all
- 
+# This playbook prints a simple debug message
+- name: Echo 
+  hosts: 127.0.0.1
+  connection: local
+
   tasks:
- 
-  - name: Hello World!
-    shell: echo "Hi! Tower is working."
+  - name: Print debug message
+    debug:
+      msg: Hello, world!
