--- a/ansible/whoami/playbook.yml
+++ b/ansible/whoami/playbook.yml
@@ -8,4 +8,9 @@
 
      - name: debug
        ansible.builtin.debug:
-         var: _command
+         var: _command.stdout
+
+    - name: Create Hello World file
+      ansible.builtin.copy:
+        content: "Hello World"
+        dest: /home/monger/hello-world.txt         
